tests/FSharp.Analyzers.Tests/data/string/lastindexof/negative/Char Int32.fs
module M

open System
"foo".LastIndexOf('f',0)
